# envseal

./: .gitignore  README.md  README.zh-CN.md  USAGE.md  pyproject.toml
envseal/: cli.py  config.py  diffing.py  dotenvio.py  scanner.py  sops.py  vault.py
tests/: conftest.py  test_cli.py  test_cli_init.py  test_config.py  test_crypto.py  test_diffing.py  test_dotenvio.py  test_integration.py  test_scanner.py  test_sops.py  test_vault.py
